# auto-vtol-network

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
archive/: README.md
archive/legacy_runtime/: README.md
archive/legacy_tests/: test_adaptive_sweep.py  test_admissibility.py  test_nodes.py  test_phase2b_simulation.py  test_physics.py  test_physics_mapping.py  test_simulation.py  test_tranche_sweep.py
configs/: comms_plus_hub_degraded.toml  dense_weather.toml  emergency_pad_outage.toml  example_adaptive_sweep_incident_low_reserve.json  example_adaptive_sweep_manifest.json  example_adaptive_sweep_node_saturation.json  example_adaptive_sweep_weather_corridor_load.json  nominal.toml  spoofed_vehicle_injection.toml  stale_state_dense_load.toml  stale_state_nominal_load.toml  supplier_compromise.toml  trust_and_comms_compound.toml  weather_disruption.toml  weather_plus_contingency_saturation.toml
data/phase2b/: README.md  corridors.csv  nodes.csv  vehicles.csv
data/sample/: corridors.csv  nodes.csv  vehicles.csv
docs/: V2_ARCHITECTURE.md  V2_CALIBRATION_MIGRATION.md  V2_EXTERNAL_INGESTION.md  architecture.md  dashboard_demo.md  roadmap.md  simulator.md  unification.md
scripts/: _scenario_runner.py  dashboard_smoke.py  refresh_demo_replays.py  release_check.py  run_contingency_saturation.py  run_dense_weather.py  run_nominal.py  run_phase2b_sweep.py  run_spoofed_vehicle_injection.py  run_supplier_compromise.py  run_trust_and_comms_compound.py  run_weather_case.py
skills/auto_vtol_network/: README.md  __init__.py  __main__.py  contracts.py  harness.py  registry.py  v2_adapter.py
src/avn/: __main__.py  contingency.py  failures.py  sweep.py  sweep_adaptive.py  sweep_analysis.py  sweep_tranches.py  trust.py
tests/: test_adaptive_sweep.py  test_alerting.py  test_anti_drift.py  test_avn_v2.py  test_batch_runs.py  test_dashboard_replay_loading.py  test_dashboard_smoke.py  test_demo_assets.py  test_demo_scenarios.py  test_governance_artifacts.py  test_legacy_config_runner_shims.py  test_phase2b_compatibility.py  test_phase2b_simulation.py  test_phase2b_units.py  test_phase_detection.py  test_policy_modes.py  test_priority_mission.py  test_queue_dynamics.py  test_replay_determinism.py  test_reroute_behavior.py  test_routing.py  test_scenario_schema.py  test_simulation_engine.py  test_skill_pack_pipeline.py  test_skill_pack_schema_validation.py  test_skill_pack_writers.py  test_tranche_isolation.py  test_tranche_sweep.py  test_turnaround_and_stand_occupancy.py  test_ui_state_contract.py  test_weather_degradation.py
(+156 files in other folders)
