[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-vtol-network"
version = "0.1.0"
description = "Phase 2C autonomous VTOL network tranche exploration engine for governed failure discovery"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.8,<4.0",
  "networkx>=3.2,<4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
