[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-vtol-network"
version = "0.1.0"
description = "Deterministic corridor-and-node autonomous VTOL network simulator with dashboard replay."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "networkx>=3.2,<4.0",
]

[project.scripts]
avn = "avn.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"avn.demo_assets" = ["*.json"]
"avn.scenarios" = ["*.json"]
"avn.ui.dashboard" = ["*.html", "*.css", "*.js"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
